--- a/ui/style/style.css
+++ b/ui/style/style.css
@@ -1,4 +1,4 @@
-/* Remove the navbar's default margin-bottom and rounded borders */ 
+/* Remove the navbar's default margin-bottom and rounded borders */
 .navbar {
     margin-bottom: 0;
     border-radius: 0;
@@ -27,9 +27,10 @@ footer {
         height: auto;
         padding: 15px;
     }
-    .row.content {height:auto;} 
+    .row.content {height:auto;}
 }
 
 #main {
-    background-color: red;
+  background-color: #1abc9c; /* Green */
+      color: #ffffff;
 }
