--- a/ui/style/style.css
+++ b/ui/style/style.css
@@ -5,13 +5,12 @@
 }
 
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-.row.content {height: 450px}
 
 /* Set gray background color and 100% height */
 .sidenav {
+    height: 100vh;
     padding-top: 20px;
     background-color: #f1f1f1;
-    height: 100%;
 }
 
 /* Set black background color, white text and some padding */
@@ -30,6 +29,20 @@ footer {
     .row.content {height:auto;} 
 }
 
-#main {
-    background-color: red;
+.main-center {
+    text-align: center;
+}
+
+#main-header > h1:after {
+    content: "ME";
+    color: red;
+}
+
+#spend-value {
+    color: red;
+    font-size: 24px;
+}
+
+.input-question {
+    font-size: 24px;
 }
